--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@ ul {
 }
 
 @import 'header.scss';
+@import 'iconowts.scss';
 @import 'modal.scss';
 @import 'modal2.scss';
 @import 'masthead.scss';
