--- a/sass/_cursos.scss
+++ b/sass/_cursos.scss
@@ -262,6 +262,13 @@
                     font-weight: 100;
                     padding-left: 15px;
                 }
+                .texto-violeta {
+                    color: #9966ff;
+                }
+                .bold {
+                    font-weight: bolder;
+                    font-size: 1.5rem;
+                }
             }
         }
         .menu-contenedor-show {
@@ -314,11 +321,11 @@
         grid-template-rows: repeat(1, auto);
         width: 100%;
         .curso-central {
-            grid-row: 1 / 2;
+            grid-row: 2 / 3;
             grid-column: 1 / 2;
         }
         .curso-nav {
-            grid-row: 2 / 3;
+            grid-row: 1 / 2;
             grid-column: 1 / 2;
         }
         .curso-carrito {
