--- a/sass/main.css
+++ b/sass/main.css
@@ -2166,6 +2166,46 @@ ul {
   }
 }
 
+.becas-contenedor {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  height: 180px;
+  background-color: #cccccc;
+}
+
+.becas-contenedor img {
+  position: absolute;
+  right: 15px;
+  width: 150px;
+}
+
+.becas-contenedor h3 {
+  margin: auto;
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 1.5rem;
+}
+
+.becas-texto {
+  max-width: 500px;
+  margin: 30px auto;
+  padding: 0 15px;
+}
+
+.becas-texto p {
+  font-weight: lighter;
+  text-align: justify;
+  line-height: 1.5rem;
+  letter-spacing: 0.05rem;
+  font-size: 1rem;
+  opacity: 0.6;
+}
+
 /* Medias querys responsive */
 @media screen and (max-width: 850px) {
   .contenedor-col-curso {
@@ -2283,6 +2323,15 @@ ul {
     -ms-grid-row: 6;
     -ms-grid-row-span: 1;
     grid-row: 6 / 7;
+  }
+  .becas-contenedor img {
+    bottom: -60%;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+  }
+  .becas-texto {
+    margin-top: 130px;
   }
 }
 
