--- a/sass/main.css
+++ b/sass/main.css
@@ -984,13 +984,15 @@ ul {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding-bottom: 30px;
 }
 
 .formulario form {
   width: 50%;
+  text-align: right;
 }
 
-.form-title {
+.formulario form .form-title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1003,11 +1005,11 @@ ul {
   color: white;
 }
 
-.form-title h4 {
+.formulario form .form-title h4 {
   margin-left: 15px;
 }
 
-.input-area {
+.formulario form .input-area {
   width: 100%;
   height: 80px;
   display: -webkit-box;
@@ -1022,31 +1024,27 @@ ul {
           justify-content: center;
 }
 
-.input-area input[type="checkbox"] {
+.formulario form .input-area input[type="checkbox"] {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
 }
 
-.input-area input {
+.formulario form .input-area input {
   width: 100%;
   border: none;
   border-bottom: 1px solid black;
   background-color: transparent;
 }
 
-.input-area input:focus {
+.formulario form .input-area input:focus {
   outline: none;
-}
-
-.formulario form button,
-.form-2 form button {
-  float: right;
 }
 
 @media screen and (max-width: 750px) {
   .formulario form {
+    text-align: center;
     width: 90%;
   }
 }
