--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -3,7 +3,8 @@
     color: red;
 }
 
-.formulario {
+.formulario,
+.formulario-inscripcion {
     display: flex;
     justify-content: center;
     padding-bottom: 30px;
