--- a/sass/_institucional.scss
+++ b/sass/_institucional.scss
@@ -15,13 +15,14 @@
         }
         &::after {
             content: '';
-            background-image: url('../img/MARCAYUGUETSnavegador.png');
+            background-image: url('../img/logoONG.jpg');
             background-size: contain;
+            background-repeat: no-repeat;
             position: absolute;
             bottom: -80px;
             left: 50px;
-            width: 250px;
-            height: 120px;
+            width: 200px;
+            height: 105px;
         }
     }
     .asociacion-col {
@@ -261,8 +262,14 @@
         .asociacion-title {
             width: 100%;
             &::after {
-                left: 10px;
-                bottom: -110px;
+                left: 0;
+                right: 0;
+                margin: 0 auto;
+                bottom: -100px;
+            }
+            h3 {
+                text-align: center;
+                font-size: 1.8rem;
             }
         }
         .asociacion-col {
@@ -274,26 +281,33 @@
                 padding: 0;
                 .contenido-title {
                     width: 100%;
+                    h3 {
+                        text-align: center;
+                        font-size: 1.5rem;
+                    }
                 }
             }
         }
     }
     .programa-title,
     .puertas-title {
+        max-width: none;
         width: 100%;
         margin: 0;
         height: 100px;
         h3 {
-            width: 60%;
-            font-size: 0.8rem;
+            text-align: center;
+            font-size: 1.2rem;
             margin: 0 5px;
         }
         &::before {
             display: none;
         }
         &::after {
-            bottom: 0px;
-            right: -50px;
+            bottom: -80px;
+            right: 0px;
+            left: 0;
+            margin: 0 auto;
             width: 100px;
             height: 100px;
         }
@@ -309,6 +323,10 @@
     }
     .puertas-body {
         flex-direction: column;
+        margin-top: 100px;
+    }
+    .programa-col {
+        margin-top: 90px;
     }
     .prensa-body {
         flex-direction: column;
