--- a/sass/_carrera.scss
+++ b/sass/_carrera.scss
@@ -19,6 +19,9 @@
     flex-direction: column;
     margin: auto;
     padding-bottom: 50px;
+    iframe {
+        margin-top: 30px;
+    }
 }
 
 .titulo-charla {
@@ -336,6 +339,11 @@
 @media screen and (max-width:650px) {
     .charla {
         width: 100%;
+        iframe {
+            width: 90%;
+            margin-left: auto;
+            margin-right: auto;
+        }
         .texto-charla {
             padding: 5px;
             p {
