--- a/sass/_ong.scss
+++ b/sass/_ong.scss
@@ -31,8 +31,8 @@
         align-items: center;
         margin-top: 30px;
         p {
-            width: 40%;
-            margin-right: 15px;
+            width: 48%;
+            margin: 50px 15px;
             opacity: 0.6;
             text-align: justify;
             line-height: 1.5rem;
