--- a/sass/_graduados.scss
+++ b/sass/_graduados.scss
@@ -23,6 +23,9 @@
 .col-graduados-3 {
     grid-column: 3 / 4;
     grid-row: 1 / 3;
+    iframe {
+        max-width: 100%;
+    }
 }
 
 .col-head {
@@ -74,6 +77,11 @@
 
 .col-content {
     width: 100%;
+}
+
+.col-content video {
+    max-width: 100%;
+    margin-top: 20px;
 }
 
 .col-content img {
