--- a/sass/_institucional.scss
+++ b/sass/_institucional.scss
@@ -16,13 +16,14 @@
         &::after {
             content: '';
             background-image: url('../img/logoONG.png');
+            box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.3);
             background-size: contain;
             background-repeat: no-repeat;
             position: absolute;
             bottom: -80px;
             left: 50px;
             width: 200px;
-            height: 105px;
+            height: 98px;
         }
     }
     .asociacion-col {
@@ -268,7 +269,7 @@
                 left: 0;
                 right: 0;
                 margin: 0 auto;
-                bottom: -100px;
+                bottom: -90px;
             }
             h3 {
                 text-align: center;
