--- a/sass/main.css
+++ b/sass/main.css
@@ -2489,13 +2489,15 @@ ul {
 .contenedor-asociacion .asociacion-title::after {
   content: '';
   background-image: url("../img/logoONG.png");
+  -webkit-box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.3);
+          box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.3);
   background-size: contain;
   background-repeat: no-repeat;
   position: absolute;
   bottom: -80px;
   left: 50px;
   width: 200px;
-  height: 105px;
+  height: 98px;
 }
 
 .contenedor-asociacion .asociacion-col {
@@ -2813,7 +2815,7 @@ ul {
     left: 0;
     right: 0;
     margin: 0 auto;
-    bottom: -100px;
+    bottom: -90px;
   }
   .contenedor-asociacion .asociacion-title h3 {
     text-align: center;
