--- a/sass/_carrera.scss
+++ b/sass/_carrera.scss
@@ -8,11 +8,6 @@
     width: 50%;
 }
 
-.col-carrera-1 p {
-    margin-left: 30px;
-    opacity: 0.5;
-}
-
 .charla {
     width: 80%;
     display: flex;
@@ -37,6 +32,12 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
+    p {
+        text-align: justify;
+        font-weight: 300;
+        line-height: 1.5rem;
+        letter-spacing: 0.03rem;
+    }
 }
 
 .texto-charla img {
