--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -30,7 +30,7 @@
             content: '';
             width: 50%;
             height: 100%;
-            background-color: #9966ff;
+            background-color: white;
         }
     }
     .nav-navbar {
