--- a/sass/_masthead.scss
+++ b/sass/_masthead.scss
@@ -24,7 +24,7 @@
 }
 
 .col-1 p {
-    padding-left: 20px;
+    padding-left: 100px;
     opacity: 0.4;
 }
 
@@ -146,6 +146,10 @@
     }
     .col-1 {
         width: 100%;
+        text-align: center;
+        p {
+            padding: 0;
+        }
     }
     .col-1 img {
         margin-top: 20px;
