--- a/sass/_cursos.scss
+++ b/sass/_cursos.scss
@@ -7,7 +7,7 @@
     img {
         width: 100%;
     }
-    button {
+    a {
         color: white;
         background-color: #9966ff;
         border: none;
