--- a/sass/main.css
+++ b/sass/main.css
@@ -1131,6 +1131,28 @@ body {
   margin-left: 5px;
 }
 
+.col-inscripcion .aclaracion {
+  width: 80%;
+  margin: 10px auto;
+  padding: 15px 0;
+  font-weight: lighter;
+  text-align: justify;
+  line-height: 1.5rem;
+  letter-spacing: 0.05rem;
+  font-size: 0.8rem;
+}
+
+.col-inscripcion a {
+  margin: auto;
+  margin-top: 30px;
+  color: white;
+  background-color: red;
+  padding: 7px 45px;
+  border-radius: 20px;
+  border: none;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 650px) {
   .col {
     margin-bottom: 50px;
@@ -1821,7 +1843,7 @@ body {
   width: 100%;
 }
 
-.curso-img-contenedor button {
+.curso-img-contenedor a {
   color: white;
   background-color: #9966ff;
   border: none;
