--- a/sass/_carrera.scss
+++ b/sass/_carrera.scss
@@ -288,6 +288,67 @@
     }
 }
 
+// EMPRENDIMIENTOS
+.emprendimientos-contenedor {
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 50px;
+    background-color: rgb(247, 247, 234);
+    .emprendimientos-titulo {
+        background-color: #999999;
+        width: 60%;
+        margin: 0 auto;
+        text-align: center;
+        h3 {
+            padding-top: 25px;
+            font-size: 1.5rem;
+            color: #cccccc;
+            text-transform: uppercase;
+            margin: 0;
+        }
+        h2 {
+            text-transform: uppercase;
+            font-size: 2rem;
+            margin: 0;
+        }
+        p {
+            font-size: 1.5rem;
+            margin: 0;
+            padding-bottom: 25px;
+        }
+    }
+    .emprendimientos-body {
+        width: 60%;
+        margin: 0 auto;
+        padding: 30px;
+        a {
+            display: flex;
+            align-items: center;
+            font-size: 1.2rem;
+            text-decoration: none;
+            text-transform: uppercase;
+            color: black;
+            margin: 10px 50px;
+            i {
+                margin-right: 15px;
+                font-size: 1.5rem;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:950px) {
+    .emprendimientos-contenedor {
+        width: 90%;
+        .emprendimientos-titulo {
+            width: 80%;
+        }
+        .emprendimientos-body {
+            width: 80%;
+        }
+    }
+}
+
 @media screen and (max-width:750px) {
     .masthead-carrera {
         flex-direction: column;
@@ -392,6 +453,24 @@
         .plan-columnas {
             padding: 0 10px;
             grid-template-columns: repeat(1, 1fr);
+        }
+    }
+    .emprendimientos-contenedor {
+        .emprendimientos-titulo {
+            width: 100%;
+            p {
+                font-size: 1rem;
+            }
+            h3, h2 {
+                font-size: 1.2rem;
+            }
+        }
+        .emprendimientos-body {
+            width: 90%;
+            padding: 0;
+            a {
+                margin: 10px;
+            }
         }
     }
 }
