--- a/sass/main.css
+++ b/sass/main.css
@@ -1553,6 +1553,77 @@ body {
   height: 200px;
 }
 
+.emprendimientos-contenedor {
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 50px;
+  background-color: #f7f7ea;
+}
+
+.emprendimientos-contenedor .emprendimientos-titulo {
+  background-color: #999999;
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.emprendimientos-contenedor .emprendimientos-titulo h3 {
+  padding-top: 25px;
+  font-size: 1.5rem;
+  color: #cccccc;
+  text-transform: uppercase;
+  margin: 0;
+}
+
+.emprendimientos-contenedor .emprendimientos-titulo h2 {
+  text-transform: uppercase;
+  font-size: 2rem;
+  margin: 0;
+}
+
+.emprendimientos-contenedor .emprendimientos-titulo p {
+  font-size: 1.5rem;
+  margin: 0;
+  padding-bottom: 25px;
+}
+
+.emprendimientos-contenedor .emprendimientos-body {
+  width: 60%;
+  margin: 0 auto;
+  padding: 30px;
+}
+
+.emprendimientos-contenedor .emprendimientos-body a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 1.2rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: black;
+  margin: 10px 50px;
+}
+
+.emprendimientos-contenedor .emprendimientos-body a i {
+  margin-right: 15px;
+  font-size: 1.5rem;
+}
+
+@media screen and (max-width: 950px) {
+  .emprendimientos-contenedor {
+    width: 90%;
+  }
+  .emprendimientos-contenedor .emprendimientos-titulo {
+    width: 80%;
+  }
+  .emprendimientos-contenedor .emprendimientos-body {
+    width: 80%;
+  }
+}
+
 @media screen and (max-width: 750px) {
   .masthead-carrera {
     -webkit-box-orient: vertical;
@@ -1664,6 +1735,22 @@ body {
     padding: 0 10px;
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
+  }
+  .emprendimientos-contenedor .emprendimientos-titulo {
+    width: 100%;
+  }
+  .emprendimientos-contenedor .emprendimientos-titulo p {
+    font-size: 1rem;
+  }
+  .emprendimientos-contenedor .emprendimientos-titulo h3, .emprendimientos-contenedor .emprendimientos-titulo h2 {
+    font-size: 1.2rem;
+  }
+  .emprendimientos-contenedor .emprendimientos-body {
+    width: 90%;
+    padding: 0;
+  }
+  .emprendimientos-contenedor .emprendimientos-body a {
+    margin: 10px;
   }
 }
 
