--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -21,6 +21,7 @@
         height: 100%;
         width: 30%;
         display: flex;
+        z-index: 50;
         img {
             max-width: 100%;
             height: 100%;
@@ -138,6 +139,7 @@
             }
             img {
                 margin-left: 30px;
+                z-index: 50;
             }
         }
         .nav-navbar {
