--- a/sass/main.css
+++ b/sass/main.css
@@ -50,6 +50,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  z-index: 50;
 }
 
 .nav .nav-img img {
@@ -204,6 +205,7 @@ body {
   }
   .nav .nav-img img {
     margin-left: 30px;
+    z-index: 50;
   }
   .nav .nav-navbar {
     width: 280px;
@@ -594,7 +596,7 @@ body {
 
 .col-1 p {
   padding-left: 100px;
-  opacity: 0.4;
+  opacity: 0.8;
 }
 
 .col-1 img {
