--- a/sass/_carrera.scss
+++ b/sass/_carrera.scss
@@ -319,19 +319,55 @@
     }
     .emprendimientos-body {
         width: 60%;
-        margin: 0 auto;
-        padding: 30px;
+        margin: 20px auto;
+        padding-bottom: 20px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+        justify-content: space-evenly;
         a {
             display: flex;
-            align-items: center;
+            align-items: flex-start;
             font-size: 1.2rem;
             text-decoration: none;
             text-transform: uppercase;
             color: black;
-            margin: 10px 50px;
-            i {
-                margin-right: 15px;
-                font-size: 1.5rem;
+            // margin: 10px 50px;
+            // i {
+            //     margin-right: 15px;
+            //     font-size: 1rem;
+            // }
+            .emprendimientos-contenido {
+                background-color: white;
+                width: 100%;
+                height: 140px;
+                border-left: 8px solid #cc99ff;
+                border-radius: 5px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                padding: 20px;
+                box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.3);
+                h3 {
+                    margin: 0;
+                    font-size: 1rem;
+                }
+                h4 {
+                    font-size: 0.8rem;
+                    margin: 0;
+                    margin-top: 5px;
+                    opacity: 0.4;
+                }
+                p {
+                    opacity: 0.6;
+                    text-align: justify;
+                    font-weight: 300;
+                    line-height: 1.2rem;
+                    letter-spacing: 0.03rem;
+                    font-size: 0.8rem;
+                    text-transform: none;
+                    margin: 0;
+                }
             }
         }
     }
@@ -456,6 +492,7 @@
         }
     }
     .emprendimientos-contenedor {
+        width: 100%;
         .emprendimientos-titulo {
             width: 100%;
             p {
@@ -468,6 +505,7 @@
         .emprendimientos-body {
             width: 90%;
             padding: 0;
+            grid-template-columns: repeat(1, 1fr);
             a {
                 margin: 10px;
             }
