--- a/sass/_carrera.scss
+++ b/sass/_carrera.scss
@@ -340,13 +340,14 @@
             .emprendimientos-contenido {
                 background-color: white;
                 width: 100%;
-                height: 140px;
+                height: 130px;
                 border-left: 8px solid #cc99ff;
                 border-radius: 5px;
                 display: flex;
                 flex-direction: column;
-                justify-content: center;
+                justify-content: flex-start;
                 padding: 20px;
+                padding-top: 30px;
                 box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.3);
                 h3 {
                     margin: 0;
