--- a/sass/main.css
+++ b/sass/main.css
@@ -2417,6 +2417,83 @@ body {
   opacity: 0.6;
 }
 
+.curso-abj {
+  width: 90%;
+  margin: auto;
+  margin-bottom: 80px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  gap: 50px;
+}
+
+.curso-abj .abj-img img {
+  max-width: 100%;
+}
+
+.curso-abj .abj-pago {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.curso-abj .abj-pago h3 {
+  margin: 0;
+  font-size: 1.5rem;
+}
+
+.curso-abj .abj-pago p {
+  margin: 0;
+  margin-bottom: 20px;
+  opacity: 0.6;
+}
+
+.curso-abj .abj-pago .abj-btn-primero {
+  background-color: #cccccc;
+  color: #9966ff;
+  padding: 7px 45px;
+  border-radius: 20px;
+  border: none;
+  cursor: pointer;
+}
+
+.curso-abj .abj-pago .abj-btn-segundo {
+  margin: 15px 0;
+  background-color: #9966ff;
+  color: white;
+  padding: 7px 25px;
+  border-radius: 20px;
+  border: none;
+  cursor: pointer;
+}
+
+.curso-abj .abj-texto {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.curso-abj .abj-texto p {
+  opacity: 0.6;
+}
+
 /* Medias querys responsive */
 @media screen and (max-width: 850px) {
   .contenedor-col-curso {
@@ -2463,6 +2540,16 @@ body {
     -ms-grid-row: 4;
     -ms-grid-row-span: 1;
     grid-row: 4 / 5;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .curso-abj {
+    width: 90%;
+    margin: auto;
+    margin-bottom: 80px;
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
   }
 }
 
