--- a/sass/_inscripcion.scss
+++ b/sass/_inscripcion.scss
@@ -55,6 +55,10 @@
     }
 }
 
+.col-inscripcion-imagen {
+    max-width: 100% !important; 
+}
+
 @media screen and (max-width:650px) {
     .col {
         margin-bottom: 50px;
