--- a/sass/main.css
+++ b/sass/main.css
@@ -2011,6 +2011,33 @@ body {
   color: #99cc99;
 }
 
+.abj-contendor {
+  width: 90%;
+  margin: auto;
+  margin-bottom: 80px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  gap: 50px;
+}
+
+.abj-contendor .abj-img {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+}
+
+.abj-contendor .abj-img img {
+  max-width: 100%;
+}
+
+.abj-contendor .preg-frecuentes-abj {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2 / 4;
+}
+
 .preguntas-frecuentes {
   max-width: 850px;
   margin: 30px auto;
@@ -2319,6 +2346,13 @@ body {
   color: #9966ff;
 }
 
+.contenedor-col-curso .curso-programa-drop h2 p {
+  text-transform: none;
+  margin: 2px;
+  font-size: 1.2rem;
+  text-align: center;
+}
+
 .contenedor-col-curso .curso-programa-drop .drop-contenido {
   display: none;
   -webkit-animation: dropdown 1s;
@@ -2554,6 +2588,24 @@ body {
     margin-bottom: 80px;
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
+  }
+  .abj-contendor {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+    gap: 50px;
+  }
+  .abj-contendor .abj-img {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+  }
+  .abj-contendor .abj-img img {
+    max-width: 100%;
+  }
+  .abj-contendor .preg-frecuentes-abj {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
   }
 }
 
@@ -3179,6 +3231,45 @@ body {
   }
   .prensa-body .prensa-col .prensa-col-body {
     width: 100%;
+  }
+}
+
+.propaganda-curso {
+  position: fixed;
+  z-index: 150;
+  left: 20px;
+  bottom: 20%;
+  border-bottom: 5px solid  black;
+  background-color: #9966ff;
+  color: white;
+  -webkit-transition: color 1s;
+  transition: color 1s;
+  cursor: pointer;
+  padding: 15px 30px;
+  text-align: center;
+}
+
+.propaganda-curso h3 {
+  margin: 0;
+  text-transform: uppercase;
+}
+
+.propaganda-curso p {
+  margin: 0;
+}
+
+.propaganda-curso:hover {
+  background-color: #9966ff90;
+  color: black;
+}
+
+@media screen and (max-width: 650px) {
+  .propaganda-curso {
+    width: 30vw;
+    left: 10px;
+    bottom: 30px;
+    font-size: 0.6rem;
+    padding: 10px 15px;
   }
 }
 /*# sourceMappingURL=main.css.map */
